--- a/package.json
+++ b/package.json
@@ -2,8 +2,12 @@
   "name": "undressor",
   "version": "1.0.0",
   "description": "Twitter Bot + dashboard to visualize interest and activities of twitter accounts",
-  "main": "index.js",
+  "main": "dist/server.js",
   "scripts": {
+    "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
+    "build": "tsc",
+    "prestart": "npm run build",
+    "start": "node .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,7 +25,15 @@
   },
   "homepage": "https://github.com/thecodemonkey/undressor#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/node": "^18.0.0",
+    "tslint": "^6.1.3",
+    "typescript": "^4.7.4"
   }
 }
