--- a/api/package.json
+++ b/api/package.json
@@ -7,7 +7,8 @@
     "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
     "build": "tsc",
     "start": "node .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "bot": "npm run build && node ./dist/twitter.bot.js"
   },
   "repository": {
     "type": "git",
@@ -25,11 +26,14 @@
   "homepage": "https://github.com/thecodemonkey/undressor#readme",
   "dependencies": {
     "@types/cors": "^2.8.12",
+    "@types/cron": "^2.0.0",
     "@types/express": "^4.17.13",
     "@types/node": "^18.0.0",
     "cors": "^2.8.5",
+    "cron": "^2.0.0",
     "dotenv": "^16.0.1",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "twitter-api-v2": "^1.12.2"
   },
   "devDependencies": {
     "tslint": "^6.1.3",
