--- a/api/package.json
+++ b/api/package.json
@@ -29,10 +29,12 @@
     "@types/cron": "^2.0.0",
     "@types/express": "^4.17.13",
     "@types/node": "^18.0.0",
+    "@types/pg": "^8.6.5",
     "cors": "^2.8.5",
     "cron": "^2.0.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "pg": "^8.7.3",
     "twitter-api-v2": "^1.12.2"
   },
   "devDependencies": {
