--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,9 @@ dist/**/*
 *.map
 *.js.map
 *.js
+api/dist/twitter.bot.js
+api/dist/twitter.bot.js.map
+api/dist/twitter.config.js
+api/dist/twitter.config.js.map
+api/dist/twitter.proxy.js
+api/dist/twitter.proxy.js.map
