--- a/ui/package.json
+++ b/ui/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "postinstall": "npm i http-server -g",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "start:local": "ng serve --host 192.168.0.148"
   },
   "private": true,
   "dependencies": {
