--- a/api/package.json
+++ b/api/package.json
@@ -34,10 +34,12 @@
     "cron": "^2.0.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "node-fetch": "^2.6.6",
     "pg": "^8.7.3",
     "twitter-api-v2": "^1.12.2"
   },
   "devDependencies": {
+    "@types/node-fetch": "^2.6.2",
     "tslint": "^6.1.3",
     "typescript": "^4.7.4"
   }
