--- a/api/package.json
+++ b/api/package.json
@@ -36,10 +36,12 @@
     "express": "^4.18.1",
     "node-fetch": "^2.6.6",
     "pg": "^8.7.3",
+    "puppeteer": "^15.3.1",
     "twitter-api-v2": "^1.12.2"
   },
   "devDependencies": {
     "@types/node-fetch": "^2.6.2",
+    "@types/puppeteer": "^5.4.6",
     "tslint": "^6.1.3",
     "typescript": "^4.7.4"
   }
