--- a/ui/package.json
+++ b/ui/package.json
@@ -25,6 +25,8 @@
     "@fortawesome/free-brands-svg-icons": "^6.1.1",
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "chart.js": "^3.8.0",
+    "ng2-charts": "^3.1.0",
     "ngx-device-detector": "^4.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
