--- a/ui/package.json
+++ b/ui/package.json
@@ -26,6 +26,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "chart.js": "^3.8.0",
+    "chartjs-chart-matrix": "^1.1.1",
     "chartjs-chart-wordcloud": "^3.8.0",
     "ng2-charts": "^3.1.0",
     "ngx-device-detector": "^4.0.0",
