--- a/api/package.json
+++ b/api/package.json
@@ -34,6 +34,7 @@
     "cron": "^2.0.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "moment": "^2.29.4",
     "node-fetch": "^2.6.6",
     "pg": "^8.7.3",
     "puppeteer": "^15.3.1",
