--- a/api/package.json
+++ b/api/package.json
@@ -35,6 +35,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "moment": "^2.29.4",
+    "node-cache": "^5.1.2",
     "node-fetch": "^2.6.6",
     "pg": "^8.7.3",
     "puppeteer": "^15.3.1",
