--- a/ui/package.json
+++ b/ui/package.json
@@ -29,6 +29,7 @@
     "chartjs-chart-matrix": "^1.1.1",
     "chartjs-chart-wordcloud": "^3.8.0",
     "chartjs-plugin-datalabels": "^2.0.0",
+    "humanize-plus": "^1.8.2",
     "ng2-charts": "^3.1.0",
     "ngx-device-detector": "^4.0.0",
     "rxjs": "~7.5.0",
@@ -39,6 +40,7 @@
     "@angular-devkit/build-angular": "^14.0.3",
     "@angular/cli": "~14.0.3",
     "@angular/compiler-cli": "^14.0.0",
+    "@types/humanize-plus": "^1.8.0",
     "@types/jasmine": "~4.0.0",
     "jasmine-core": "~4.1.0",
     "karma": "~6.3.0",
