--- a/ui/package.json
+++ b/ui/package.json
@@ -30,6 +30,7 @@
     "chartjs-chart-wordcloud": "^3.8.0",
     "chartjs-plugin-datalabels": "^2.0.0",
     "humanize-plus": "^1.8.2",
+    "moment": "^2.29.4",
     "ng2-charts": "^3.1.0",
     "ngx-device-detector": "^4.0.0",
     "rxjs": "~7.5.0",
